fix package name;

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DockApps",
+  "name": "dockapps",
   "version": "0.0.0",
   "description": "Open your favorite websites in your Mac OS X dock.",
   "repository": {
